--- a/Move.toml
+++ b/Move.toml
@@ -1,12 +1,12 @@
 [package]
 name = "pump_steamm"
 version = "0.0.1"
-edition = "2025.beta" # edition = "legacy" to use legacy (pre-2024) Move
+edition = "2024.beta" # edition = "legacy" to use legacy (pre-2024) Move
 # license = ""           # e.g., "MIT", "GPL", "Apache 2.0"
 # authors = ["..."]      # e.g., ["Joe Smith (joesmith@noemail.com)", "John Snow (johnsnow@noemail.com)"]
 
 [dependencies]
-Sui = { git = "https://github.com/MystenLabs/sui.git", subdir = "crates/sui-framework/packages/sui-framework", rev = "framework/testnet" }
+Sui = { git = "https://github.com/MystenLabs/sui.git", subdir = "crates/sui-framework/packages/sui-framework", rev = "framework/mainnet" }
 suilend = { git = "https://github.com/solendprotocol/suilend.git", subdir = "contracts/suilend", rev = "devel" }
 
 # For remote import, use the `{ git = "...", subdir = "...", rev = "..." }`.
